Minor adjustments to blink-button due to a syntax error. Returned to magic bit value for port enabling, as _BV doesn't seem to work.

--- a/blink/Makefile
+++ b/blink/Makefile
@@ -1,7 +1,7 @@
 # compiler options
 CC=avr-gcc
 CFLAGS= -Os -DF_CPU=16000000UL -mmcu=atmega328p
-BINS=blink blink-interrupt
+BINS=blink blink-interrupt blink-button
 
 # compiling
 all: $(BINS)
@@ -20,4 +20,4 @@ install.%: %.hex
 	avrdude -F -V -c arduino -p ATMEGA328P -P ${USBPORT} -b 115200 -U flash:w:$< $@
 
 clean:
-	rm -f *.hex *.out
+	rm -f *.hex *.out $(BINS)
